# openswarm

./: .env.example  .gitignore  README.md  conftest.py  phylosophy.md  pyproject.toml  requirements.txt  test_agent_worker.py
config/: openswarm.example.toml  user.yaml.example
contracts/: envelope.json  manifest.json  workflow.json
demos/: phase_7_demo.md
legacy/node-swarm/: package-lock.json  package.json
manifests/: coder-python-fast.json  conductor.json  main-agent.json  my-agent.json  researcher-web-standard.json  reviewer-security-powerful.json  sector-manager-template.json
plans/: phase_7_plan.md
prompts/: conductor_system.md  main_agent_system.md  sector_manager_system.md  soul_administrator.md  soul_devil.md  soul_hacker.md  soul_mentor.md  soul_researcher.md
resources/: glossary.md  hermes-agent-reference.md  model-tiers.md  openclaw-architecture.md  security-checklist.md  stress-tested-workflows.md  thinking-loop-catalog.md
resources/migrated/: orchestrator.md  telegram.md
scripts/: first-run.sh  setup.sh
skills/coder/: SKILL.md
skills/filesystem/: SKILL.md
skills/general-task/: SKILL.md
skills/git/: SKILL.md
skills/planner/: SKILL.md
skills/python/: SKILL.md
skills/reviewer/: SKILL.md
skills/security-review/: SKILL.md
skills/shell/: SKILL.md
skills/websearch/: SKILL.md
src/: agent_worker.py  config.py  loop_optimizer.py  meta_agent.py  process_manager.py
src/agents/: __init__.py  base_agent.py  conductor.py  llm_client.py  llm_setup.py  main_agent.py  objective_parser.py  sector_manager.py
src/cli/: __init__.py  formatter.py  main.py  types.py
src/dashboard/: __init__.py
src/harness/: Dockerfile.harness  __init__.py  client.py  diff_generator.py  executor.py  server.py  (+2 more)
vision/: agent-model.md  architecture.md  dashboard-vision.md  environment.md  manifesto.md  naming.md  phases.md  prompt-engineering.md  security.md  self-healing.md  testing.md  thinking-loops.md
(+203 files in other folders)
