[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "openswarm"
version = "0.1.0"
description = "Contract-first, observable, self-healing agent swarm with a sandboxed coding harness."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.110.0",
  "uvicorn[standard]>=0.27.0",
  "pydantic>=2.6.0",
  "pydantic-settings>=2.2.0",
  "aiosqlite>=0.20.0",
  "jsonschema>=4.21.0",
  "httpx>=0.27.0",
  "websockets>=12.0",
  "click>=8.1.0",
  "rich>=13.7.0",
  "jinja2>=3.1.0",
  "PyJWT>=2.8.0",
]

[project.optional-dependencies]
telegram = ["python-telegram-bot>=21.0"]
dev = [
  "pytest>=8.0.0",
  "pytest-asyncio>=0.23.0",
]

[project.scripts]
openswarm = "cli.main:main"
openswarm-telegram = "telegram_adapter.bot:main"

[tool.setuptools]
package-dir = {"" = "src"}
py-modules = ["agent_worker", "config", "loop_optimizer", "meta_agent", "process_manager"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
# pytest-asyncio: every test that is a coroutine is treated as an
# async test.  This is the modern, recommended setting; subpackage
# conftests no longer need to register the plugin or mark tests by
# hand.
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"

# Make the test runner skip the demo-only paths under src/ that are
# not part of the test tree.
testpaths = [
    "src",
]

[tool.ruff.lint]
select = [
  "E",
  "W",
  "F",
  "I",
  "B",
  "C4",
  "UP",
  "RUF",
]
ignore = [
  "E501",
  "RUF001",
]

[tool.mypy]
python_version = "3.14"
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_configs = true
ignore_missing_imports = true
